SYNCOPE-1332: convert collection singleton calls to immutable APIs