@@ -22,7 +22,6 @@ import java.text.DateFormat;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -240,8 +239,8 @@ public class SyncopeConsoleSession extends AuthenticatedWebSession implements Ba
         }
 
         Set<String> requested = ArrayUtils.isEmpty(realms)
-                ? Collections.singleton(SyncopeConstants.ROOT_REALM)
-                : new HashSet<>(List.of(realms));
+                ? Set.of(SyncopeConstants.ROOT_REALM)
+                : Set.of(realms);
 
         for (String entitlement : entitlements.split(",")) {
             if (auth.containsKey(entitlement)) {
